# DT_UAV_AoDT_Project

DT_UAV_AoDT_Project/: .gitignore  README.md  pyproject.toml
DT_UAV_AoDT_Project/docs/: meeting_prep_conversation.md
DT_UAV_AoDT_Project/notebooks/: run_colab.ipynb
DT_UAV_AoDT_Project/src/dt_uav/: __init__.py  baselines.py  config.py  debug_env.py  env.py  evaluate.py  plot_results.py  ppo.py  quickstart.py  run_final.py  train_manager.py  train_worker.py
